# afb-supervisor

./: CHANGELOG  CMakeLists.txt  LICENSE.txt  README.md  memo-supervisor.txt  mkbuild.sh
src/: CMakeLists.txt  afb-discover.c  afb-discover.h  afb-supervisor-api.c  afb-supervisor-api.h  afb-supervisor-opts.c  afb-supervisor-opts.h  afb-supervisor.c  afb-supervisor.service.in  afm-api-supervisor.service  afm-api-supervisor.socket  afs-discover.c  afs-supervisor-api.c  afs-supervisor-api.h  afs-supervisor-opts.c  afs-supervisor-opts.h  afs-supervisor.c  afs-supervisor.service.in
